[package]
name = "spiro-sys"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"
description = "Rust bindings for libspiro"
links = "spiro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.55"
dos2unix = "=0.1.0"
